tests/lean/2161.lean.expected.out
2161.lean:15:48-15:54: error: tactic 'decide' failed for proposition
  mul (mul (mul 4 1) 1) 1 = 4
since its 'Decidable' instance reduced to
  Decidable.rec (fun h => (fun h => isFalse ⋯) h) (fun h => (fun h => h ▸ isTrue ⋯) h)
    (instDecidableEqNat (mul (mul (mul 4 1) 1) 1).num 4)
rather than to the 'isTrue' constructor.
2161.lean:22:48-22:54: error: tactic 'decide' failed for proposition
  add (add (add 4 1) 1) 1 = 4
since its 'Decidable' instance reduced to
  Decidable.rec (fun h => (fun h => isFalse ⋯) h) (fun h => (fun h => h ▸ isTrue ⋯) h)
    (instDecidableEqNat (add (add (add 4 1) 1) 1).num 4)
rather than to the 'isTrue' constructor.
